[package]
name = "bevy-icon"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]

std = []
image = ["std", "dep:image"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_winit"] }
image = { version = "0.25.9", default-features = false, optional = true }
winit = { version = "0.30", default-features = false }

[dev-dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
